# link-project-to-chat

./: .gitignore  LICENSE  README.md  pyproject.toml  where-are-we.md
Formula/: link-project-to-chat.rb
src/link_project_to_chat/: bot.py  claude_client.py  cli.py  config.py  formatting.py  task_manager.py
